@@ -32,6 +32,13 @@ version 2.5.3:
     "oar_sched_gantt_with_timesharing_and_fairsharing_and_quotas")
   - Add comments in user job STDERR files to know if a job was killed or
     checkpointed
+  - Add the variable $jobproperties_applied_after_validation. It can be used in
+    an admission rule to add a constraint after the validation of the job. Ex:
+    
+        $jobproperties_applied_after_validation = "maintenance='off'";
+    
+    So, even if all the ressources have "maintenance='on'", the new jobs will be
+    accepted but not scheduled now.
 
 version 2.5.2:
 --------------
